--- a/app/assets/stylesheets/spree/frontend/spree_hobrecht.css
+++ b/app/assets/stylesheets/spree/frontend/spree_hobrecht.css
@@ -2,6 +2,79 @@
 Placeholder manifest file.
 the installer will append this file to the app vendored assets here: 'vendor/assets/stylesheets/spree/frontend/all.css'
 */
-#home-link {
-  display: none;
+@import url(http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic);
+
+body {
+  font-family: "Lato", sans-serif;
+  font-size: 12px;
+  font-weight: 400;
+  color: #404042;
+  line-height: 18px;
+  background-color: white;
+  -webkit-font-smoothing: antialiased;
+}
+a,
+a:visited {
+  color: #000;
+}
+
+#logo {
+  text-align: center;
+  padding-bottom: 20px;
+}
+
+#top-nav-bar {
+  position: absolute;
+}
+
+nav #main-nav-bar {
+  text-transform: uppercase;
+  border: none;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  text-align: center;
+}
+nav #main-nav-bar li{
+  position:relative;
+  display:inline;
+}
+nav #main-nav-bar li a {
+  font-size: 11px;
+  font-weight: 600;
+  letter-spacing: 1px;
+}
+nav #main-nav-bar a {
+  display: inline-block;
+  padding: 10px;
+}
+nav #main-nav-bar ul{
+  position:absolute;
+  /*top:100%; Uncommenting this makes the dropdowns work in IE7 but looks a little worse in all other browsers. Your call. */
+  left:-9999px;
+  margin:0;
+  padding:0;
+  text-align:left;
+}
+nav #main-nav-bar ul li{
+  display:block;
+}
+nav #main-nav-bar li:hover ul{
+  left:0;
+}
+nav #main-nav-bar li:hover a{
+  text-decoration:underline;
+}
+nav #main-nav-bar li:hover ul a{
+  text-decoration:none;
+  background:none;
+}
+nav #main-nav-bar li:hover ul a:hover{
+  text-decoration:underline;
+  background:#f1f1f1;
+}
+nav #main-nav-bar ul a{
+  white-space:nowrap;
+  display:block;
+  border-bottom:1px solid #ccc;
 }
