--- a/app/views/spree/shared/_footer.html.erb
+++ b/app/views/spree/shared/_footer.html.erb
@@ -22,7 +22,7 @@
 
     <nav>
       <ul id="legal-nav-bar" class="inline" data-hook>
-        <li>Copyright 2014 Hobrecht All Rights Reserved</li>
+        <li><%= link_to "Copyright 2014 Hobrecht All Rights Reserved", "/" %></li>
         <li><%= link_to "Terms & Conditions", "/terms" %></li>
         <li><%= link_to "Privacy Policy", "/privacy" %></li>
       </ul>
