--- a/app/assets/stylesheets/spree/frontend/spree_hobrecht.css
+++ b/app/assets/stylesheets/spree/frontend/spree_hobrecht.css
@@ -6,9 +6,10 @@ the installer will append this file to the app vendored assets here: 'vendor/ass
 
 body {
   font-family: "Lato", sans-serif;
-  font-size: 12px;
-  font-weight: 400;
+  font-size: 13px;
+  font-weight: 900;
   color: #404042;
+  letter-spacing: 1px;
   line-height: 18px;
   background-color: white;
   -webkit-font-smoothing: antialiased;
@@ -317,5 +318,71 @@ ul#products li a.info {
 }
 
 
+/*
+* Product
+* * * * * * * * * * * * * * * * * * * */
+#product-description .product-title {
+  border: none;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+}
+#product-variants ul {
+  list-style: none;
+}
+div[data-hook="description"] {
+  margin: 20px 0;
+}
+span.price,
+#checkout-summary table tr[data-hook="item_total"] td:last-child strong,
+#checkout-summary table #summary-order-total, #order_details td.price span,
+#order_details td.total span,
+#order_summary td.price span,
+#order_summary td.total span,
+table#cart-detail tbody#line_items tr td[data-hook="cart_item_price"],
+table#cart-detail tbody#line_items tr td[data-hook="cart_item_total"],
+div[data-hook="inside_cart_form"] #subtotal span.order-total {
+  font-weight: inherit;
+  color: inherit;
+}
 
 
+/*
+* Forms
+* * * * * * * * * * * * * * * * * * * */
+input[type="submit"],
+input[type="button"],
+input[type="reset"],
+button,
+a.button {
+  background-color: #000;
+  background-image: none;
+  text-shadow: none;
+  text-transform: uppercase;
+  color: #FFF;
+  font-weight: 900;
+  font-size: 12px;
+  font-family: "Lato", sans-serif;
+  letter-spacing: 1px;
+  border: none;
+  padding: 6px 10px 5px;
+  vertical-align: top;
+  -webkit-font-smoothing: antialiased;
+  -webkit-box-shadow: none;
+  -khtml-box-shadow: none;
+  -moz-box-shadow: none;
+  -o-box-shadow: none;
+  box-shadow: none;
+  -webkit-border-radius: 0px;
+  -khtml-border-radius: 0px;
+  -moz-border-radius: 0px;
+  -ms-border-radius: 0px;
+  -o-border-radius: 0px;
+  border-radius: 0px;
+}
+input[type="submit"].large,
+input[type="button"].large,
+input[type="reset"].large,
+button.large, a.button.large {
+  padding: 10px 25px;
+  font-size: 12px;
+}
