Update copyright notice. Add classes to menu items.

--- a/app/views/spree/shared/_footer.html.erb
+++ b/app/views/spree/shared/_footer.html.erb
@@ -3,28 +3,29 @@
     
     <nav>
       <ul id="footer-nav-bar" class="inline" data-hook>
-        <li><%= link_to "Press", "/press" %></li>
-        <li><%= link_to "Bio", "/bio" %></li>
-        <li><%= link_to "Contact", "/contact" %></li>
-        <li><%= link_to "FAQ", "/faq" %></li>
+        <li class="press"><%= link_to "Press", "/press" %></li>
+        <li class="bio"><%= link_to "Bio", "/bio" %></li>
+        <li class="contact"><%= link_to "Contact", "/contact" %></li>
+        <li class="faq"><%= link_to "FAQ", "/faq" %></li>
       </ul>
     </nav>
 
     <nav>
       <ul id="social-nav-bar" class="inline" data-hook>
-        <li><%= link_to "Pinterest", "#" %></li>
-        <li><%= link_to "Twitter", "#" %></li>
-        <li><%= link_to "Facebook", "#" %></li>
-        <li><%= link_to "LinkedIn", "#" %></li>
-        <li><%= link_to "Google+", "#" %></li>
+        <li class="pinterest"><%= link_to "Pinterest", "#" %></li>
+        <li class="twitter"><%= link_to "Twitter", "#" %></li>
+        <li class="facebook"><%= link_to "Facebook", "#" %></li>
+        <li class="instagram"><%= link_to "Instagram", "#" %></li>
+        <li class="linkedin"><%= link_to "LinkedIn", "#" %></li>
+        <li class="googleplus"><%= link_to "Google+", "#" %></li>
       </ul>
     </nav>
 
     <nav>
       <ul id="legal-nav-bar" class="inline" data-hook>
-        <li><%= link_to "Copyright 2014 Hobrecht All Rights Reserved", "/" %></li>
-        <li><%= link_to "Terms & Conditions", "/terms" %></li>
-        <li><%= link_to "Privacy Policy", "/privacy" %></li>
+        <li class="copyright"><%= link_to "&copy; 2014 Hopkins Holdings, LLC dba Hobrecht", "/" %></li>
+        <li class="terms"><%= link_to "Terms & Conditions", "/terms" %></li>
+        <li class="privacy"><%= link_to "Privacy Policy", "/privacy" %></li>
       </ul>
     </nav>
 
