--- a/app/views/spree/shared/_footer.html.erb
+++ b/app/views/spree/shared/_footer.html.erb
@@ -23,7 +23,7 @@
 
     <nav>
       <ul id="legal-nav-bar" class="inline" data-hook>
-        <li class="copyright"><%= link_to "&copy; 2014 Hopkins Holdings, LLC dba Hobrecht", "/" %></li>
+        <li class="copyright"><%= link_to raw("&copy; 2014 Hopkins Holdings, LLC dba Hobrecht"), "/" %></li>
         <li class="terms"><%= link_to "Terms & Conditions", "/terms" %></li>
         <li class="privacy"><%= link_to "Privacy Policy", "/privacy" %></li>
       </ul>
