add social icons to footer, add new front page image

--- a/app/views/spree/home/index.html.erb
+++ b/app/views/spree/home/index.html.erb
@@ -1,1 +1,1 @@
-<img src="/assets/hsa-00018-mark-richards.jpg">
+<a href="/products/lou-gehrig"><img src="/assets/lou-gehrig-als-fundraiser.jpg"></a>
