--- a/app/views/spree/shared/_footer.html.erb
+++ b/app/views/spree/shared/_footer.html.erb
@@ -1,29 +1,30 @@
 <footer id="footer" class="sixteen columns" data-hook>
   <div class="container">
     
-    <nav>
+    <nav class="row">
       <ul id="footer-nav-bar" class="inline" data-hook>
         <li class="press"><%= link_to "Press", "/press" %></li>
         <li class="bio"><%= link_to "Bio", "/bio" %></li>
-        <li class="contact"><%= link_to "Contact", "/contact" %></li>
-        <li class="faq"><%= link_to "FAQ", "/faq" %></li>
+        <!-- <li class="contact"><%= link_to "Contact", "/contact" %></li> -->
+        <!-- <li class="faq"><%= link_to "FAQ", "/faq" %></li> -->
       </ul>
     </nav>
 
-    <nav>
-      <ul id="social-nav-bar" class="inline" data-hook>
-        <li class="pinterest"><%= link_to "Pinterest", "#" %></li>
-        <li class="twitter"><%= link_to "Twitter", "#" %></li>
-        <li class="facebook"><%= link_to "Facebook", "#" %></li>
-        <li class="instagram"><%= link_to "Instagram", "#" %></li>
-        <li class="linkedin"><%= link_to "LinkedIn", "#" %></li>
-        <li class="googleplus"><%= link_to "Google+", "#" %></li>
+    <nav class="row">
+      <!-- Super Massive CSS-Sprite Social Media Icon Set Start -->
+      <!-- **Don't forget to put url's inside the href="" -->
+      <ul class="socialicons bw" data-hook>
+        <li><a href="" class="facebook" target="_blank">facebook</a></li>
+        <li><a href="" class="twitter" target="_blank">twitter</a></li>
+        <li><a href="" class="instagram" target="_blank">instagram</a></li>
+        <li><a href="" class="email" target="_blank">email</a></li>
       </ul>
+      <!-- Super Massive CSS-Sprite Icon Set End -->
     </nav>
 
-    <nav>
+    <nav class="row">
       <ul id="legal-nav-bar" class="inline" data-hook>
-        <li class="copyright"><%= link_to raw("&copy; 2014 Hopkins Holdings, LLC dba Hobrecht"), "/" %></li>
+        <li class="copyright"><%= link_to raw("&copy; 2014 Hopkins Holdings, LLC dba Hobrecht"), "#" %></li>
         <li class="terms"><%= link_to "Terms & Conditions", "/terms" %></li>
         <li class="privacy"><%= link_to "Privacy Policy", "/privacy" %></li>
       </ul>
