fix broken image links

--- a/app/assets/stylesheets/spree/frontend/spree_hobrecht.css
+++ b/app/assets/stylesheets/spree/frontend/spree_hobrecht.css
@@ -232,8 +232,8 @@ ul.socialicons li {
   display: inline;
   padding: 0 5px 0 0;
 }
-ul.color li a { background: url('/assets/supermassivecsspriteicons2.png') no-repeat 0 0; }
-ul.bw li a { background: url('/assets/supermassivecsspriteicons.png') no-repeat 0 0; }
+ul.color li a { background: url(<%= asset_path 'supermassivecsspriteicons2.png' %>) no-repeat 0 0; }
+ul.bw li a { background: url(<%= asset_path 'supermassivecsspriteicons.png' %>) no-repeat 0 0; }
 ul.socialicons li a { text-indent: -9999px; width: 32px; height: 33px; display: inline-block; overflow: hidden; margin: 2px; }
                   
                   
