--- a/app/views/spree/home/index.html.erb
+++ b/app/views/spree/home/index.html.erb
@@ -1,1 +1,1 @@
-<a href="/products/lou-gehrig"><img src="/assets/lou-gehrig-als-fundraiser.jpg"></a>
+<a href="/products/lou-gehrig"><%= image_tag "lou-gehrig-als-fundraiser.jpg" %></a>
