remove dead links, add social media links

--- a/app/views/spree/shared/_footer.html.erb
+++ b/app/views/spree/shared/_footer.html.erb
@@ -1,23 +1,25 @@
 <footer id="footer" class="sixteen columns" data-hook>
   <div class="container">
     
+    <!--
     <nav class="row">
       <ul id="footer-nav-bar" class="inline" data-hook>
         <li class="press"><%= link_to "Press", "/press" %></li>
         <li class="bio"><%= link_to "Bio", "/bio" %></li>
-        <!-- <li class="contact"><%= link_to "Contact", "/contact" %></li> -->
-        <!-- <li class="faq"><%= link_to "FAQ", "/faq" %></li> -->
+        <li class="contact"><%= link_to "Contact", "/contact" %></li>
+        <li class="faq"><%= link_to "FAQ", "/faq" %></li>
       </ul>
     </nav>
+    -->
 
     <nav class="row">
       <!-- Super Massive CSS-Sprite Social Media Icon Set Start -->
       <!-- **Don't forget to put url's inside the href="" -->
       <ul class="socialicons bw" data-hook>
-        <li><a href="" class="facebook" target="_blank">facebook</a></li>
-        <li><a href="" class="twitter" target="_blank">twitter</a></li>
-        <li><a href="" class="instagram" target="_blank">instagram</a></li>
-        <li><a href="" class="email" target="_blank">email</a></li>
+        <li><a href="https://www.facebook.com/HobrechtSportsArt" class="facebook" target="_blank">facebook</a></li>
+        <li><a href="https://twitter.com/HOBRECHTART" class="twitter" target="_blank">twitter</a></li>
+        <li><a href="http://instagram.com/hobrechtsportsart" class="instagram" target="_blank">instagram</a></li>
+        <li><a href="http://www.pinterest.com/davehobrecht/" class="pinterest" target="_blank">pinterest</a></li>
       </ul>
       <!-- Super Massive CSS-Sprite Icon Set End -->
     </nav>
@@ -25,8 +27,6 @@
     <nav class="row">
       <ul id="legal-nav-bar" class="inline" data-hook>
         <li class="copyright"><%= link_to raw("&copy; 2014 Hopkins Holdings, LLC dba Hobrecht"), "#" %></li>
-        <li class="terms"><%= link_to "Terms & Conditions", "/terms" %></li>
-        <li class="privacy"><%= link_to "Privacy Policy", "/privacy" %></li>
       </ul>
     </nav>
 
