update presentation of variant options

--- a/app/assets/stylesheets/spree/frontend/spree_hobrecht.css.erb
+++ b/app/assets/stylesheets/spree/frontend/spree_hobrecht.css.erb
@@ -469,6 +469,9 @@ ul#products li a.info {
   text-transform: uppercase;
   letter-spacing: 2px;
 }
+#product-variants {
+  text-transform: uppercase;
+}
 #product-variants ul {
   list-style: none;
 }
@@ -476,7 +479,10 @@ div[data-hook="description"] {
   line-height: 1.9;
   margin: 20px 0;
 }
-
+span.variant-dimensions {
+  color: #888;
+  font-weight: 700;
+}
 
 /*
 * Cart
