--- a/app/views/spree/shared/_footer.html.erb
+++ b/app/views/spree/shared/_footer.html.erb
@@ -1,16 +1,15 @@
 <footer id="footer" class="sixteen columns" data-hook>
   <div class="container">
     
-    <!--
     <nav class="row">
       <ul id="footer-nav-bar" class="inline" data-hook>
-        <li class="press"><%= link_to "Press", "/press" %></li>
+        <!-- <li class="press"><%= link_to "Press", "/press" %></li> -->
         <li class="bio"><%= link_to "Bio", "/bio" %></li>
         <li class="contact"><%= link_to "Contact", "/contact" %></li>
-        <li class="faq"><%= link_to "FAQ", "/faq" %></li>
+        <!-- <li class="faq"><%= link_to "FAQ", "/faq" %></li> -->
       </ul>
     </nav>
-    -->
+    
 
     <nav class="row">
       <!-- Super Massive CSS-Sprite Social Media Icon Set Start -->
@@ -27,6 +26,9 @@
     <nav class="row">
       <ul id="legal-nav-bar" class="inline" data-hook>
         <li class="copyright"><%= link_to raw("&copy; 2014 Hopkins Holdings, LLC dba Hobrecht"), "#" %></li>
+        <li class="terms"><%= link_to "Terms & Conditions", "/terms" %></li>
+        <li class="terms"><%= link_to "Privacy Policy", "/privacy" %></li>
+        <li class="terms"><%= link_to "Return Policy", "/returns" %></li>
       </ul>
     </nav>
 
