revised homepage. add paintbrush braphic to footer.

--- a/app/assets/stylesheets/spree/frontend/spree_hobrecht.css.erb
+++ b/app/assets/stylesheets/spree/frontend/spree_hobrecht.css.erb
@@ -114,7 +114,9 @@ nav #main-nav-bar ul a {
 * Footer
 * * * * * * * * * * * * * * * * * * * */
 footer#footer {
+  background: url(<%= asset_path 'charcoal-brush.png' %>) no-repeat center bottom;
   border: none;
+  padding-bottom: 190px;
 }
 
 
