--- a/app/views/spree/home/index.html.erb
+++ b/app/views/spree/home/index.html.erb
@@ -1,1 +1,23 @@
-<a href="/products/lou-gehrig"><%= image_tag "lou-gehrig-als-fundraiser.jpg" %></a>
+<div class="callout sixteen columns alpha omega" style="background:#888;color:#fff;margin-bottom:20px;">
+  <div class="clearfix" style="padding:20px 30px 19px;">
+    <p style="font-size:26px;line-height:32px;padding:0px 0 0;margin:0;text-transform:uppercase;text-align:center;">ALS Association Fundraiser</p>
+  </div>
+</div>
+<div class="eight columns alpha">
+  <a href="/products/lou-gehrig"><%= image_tag "lou-gehrig-als-fundraiser.jpg" %></a>
+</div>
+<div class="eight columns omega">
+  <h1><a href="/products/lou-gehrig">Lou Gehrig – Limited Edition</a></h1>
+  <h5 style="color:#888;">50% of Proceeds will be Given to the ALS Association</h5>
+  <p>One of the most famous Yankees of all time – Lou Gehrig – held the record for most consecutive games played, until he was forced to sit out because of an illness. The illness, now known as Lou Gehrig's disease, ended his record and often had Gehrig sitting in the dugout.</p>
+  <p>This painting is unique however, because while most paintings featuring Gehrig show a perspective looking from the outfield into the dugout, Hobrecht's painting takes the opposite, showing Gehrig from the dugout looking across over the outfield. "Gehrig" is one of Hobrecht's best portrayals of lighting, blur, and form, making it one of his fastest selling paintings.</p>
+  <div class="video" style="background:#0A0B08;padding:9px 0;">
+    <iframe width="460" height="345" src="//www.youtube-nocookie.com/embed/_SKyfGK9brs?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
+  </div>
+</div>
+<div class="callout sixteen columns alpha omega" style="background:#888;color:#fff;margin-top:15px;">
+  <div class="clearfix" style="padding:20px 30px 19px;">
+    <p style="float:left;font-size:26px;line-height:32px;padding:0px 0 0;margin:0;text-transform:uppercase;">Help us Fight Lou Gehrig's Disease</p>
+    <p style="float:right;padding:0;margin:0;"><a href="/products/lou-gehrig" class="button" style="background:#000;padding:10px 6px 9px 13px;">Invest in a limited edition print today&nbsp;&nbsp;&rang;</a></p>
+  </div>
+</div>
