--- a/app/views/spree/home/index.html.erb
+++ b/app/views/spree/home/index.html.erb
@@ -4,7 +4,7 @@
   </div>
 </div>
 <div class="eight columns alpha">
-  <a href="/products/lou-gehrig"><%= image_tag "lou-gehrig-als-fundraiser.jpg" %></a>
+  <a href="/products/lou-gehrig"><%= image_tag "lou-gehrig-460px.jpg" %></a>
 </div>
 <div class="eight columns omega">
   <h1><a href="/products/lou-gehrig">Lou Gehrig – Limited Edition</a></h1>
