--- a/app/views/spree/home/index.html.erb
+++ b/app/views/spree/home/index.html.erb
@@ -10,17 +10,17 @@
 
 <div class="callout sixteen columns alpha omega" style="background:#888;color:#fff;margin:1px 0px;">
   <div class="clearfix" style="padding:20px 30px 19px;">
-    <p style="float:left;font-size:26px;line-height:32px;padding:0px 0 0;margin:0;text-transform:uppercase;">Derek Jeter&nbsp;&nbsp;<span style="font-weight:300;">Limited Edition Canvas Print</span></p>
+    <p style="float:left;font-size:26px;line-height:32px;padding:0px 0 0;margin:0;text-transform:uppercase;">Derek Jeter&nbsp;&nbsp;<span style="font-weight:300;">Signed Limited Edition Canvas</span></p>
     <p style="float:right;padding:0;margin:0;"><a href="/products/jeter-legends-call" class="button" style="background:#000;padding:10px 6px 9px 13px;">Pre-order Now&nbsp;&nbsp;&rang;</a></p>
   </div>
 </div>
 
 <div class="video sixteen columns alpha omega" style="background:#1B1B1B;">
   <div class="eight columns alpha">
-    <iframe width="460" height="259" src="//www.youtube-nocookie.com/embed/xfgS1lvqX8I?rel=0" frameborder="0" allowfullscreen></iframe>
+    <iframe width="460" height="259" src="//www.youtube-nocookie.com/embed/X03_bNuihLU?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
   </div>
   <div class="eight columns omega">
-    <iframe width="460" height="259" src="//www.youtube-nocookie.com/embed/X03_bNuihLU?rel=0" frameborder="0" allowfullscreen></iframe>
+    <iframe width="460" height="259" src="//www.youtube-nocookie.com/embed/xfgS1lvqX8I?rel=0" frameborder="0" allowfullscreen></iframe>
   </div>
 </div>
 <div class="sixteen columns alpha omega" style="background:#888;height:20px;margin-top:1px;">&nbsp;</div>
