--- a/app/assets/stylesheets/spree/frontend/spree_hobrecht.css.erb
+++ b/app/assets/stylesheets/spree/frontend/spree_hobrecht.css.erb
@@ -2,7 +2,7 @@
 Placeholder manifest file.
 the installer will append this file to the app vendored assets here: 'vendor/assets/stylesheets/spree/frontend/all.css'
 */
-@import url(http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic);
+@import url(//fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic);
 
 body {
   font-family: "Lato", sans-serif;
