--- a/app/views/spree/shared/_footer.html.erb
+++ b/app/views/spree/shared/_footer.html.erb
@@ -25,7 +25,7 @@
 
     <nav class="row">
       <ul id="legal-nav-bar" class="inline" data-hook>
-        <li class="copyright"><%= link_to raw("&copy; 2014 Hopkins Holdings, LLC dba Hobrecht"), "#" %></li>
+        <li class="copyright"><%= link_to raw("&copy; 2014 Hobrecht Sports Art"), "/bio" %></li>
         <li class="terms"><%= link_to "Terms & Conditions", "/terms" %></li>
         <li class="terms"><%= link_to "Privacy Policy", "/privacy" %></li>
         <li class="terms"><%= link_to "Return Policy", "/returns" %></li>
