fixed insecure content notice

--- a/app/views/spree/shared/_footer.html.erb
+++ b/app/views/spree/shared/_footer.html.erb
@@ -15,10 +15,10 @@
       <!-- Super Massive CSS-Sprite Social Media Icon Set Start -->
       <!-- **Don't forget to put url's inside the href="" -->
       <ul class="socialicons bw" data-hook>
-        <li><a href="https://www.facebook.com/HobrechtSportsArt" class="facebook" target="_blank">facebook</a></li>
-        <li><a href="https://twitter.com/HOBRECHTART" class="twitter" target="_blank">twitter</a></li>
-        <li><a href="http://instagram.com/hobrechtsportsart" class="instagram" target="_blank">instagram</a></li>
-        <li><a href="http://www.pinterest.com/davehobrecht/" class="pinterest" target="_blank">pinterest</a></li>
+        <li><a href="//www.facebook.com/HobrechtSportsArt" class="facebook" target="_blank">facebook</a></li>
+        <li><a href="//twitter.com/HOBRECHTART" class="twitter" target="_blank">twitter</a></li>
+        <li><a href="//instagram.com/hobrechtsportsart" class="instagram" target="_blank">instagram</a></li>
+        <li><a href="//www.pinterest.com/davehobrecht/" class="pinterest" target="_blank">pinterest</a></li>
       </ul>
       <!-- Super Massive CSS-Sprite Icon Set End -->
     </nav>
