Increase size of product title on category pages.

--- a/app/assets/stylesheets/spree/frontend/spree_hobrecht.css.erb
+++ b/app/assets/stylesheets/spree/frontend/spree_hobrecht.css.erb
@@ -464,6 +464,9 @@ ul#products li .product-image {
 ul#products li a.info {
   color: #888;
   border-bottom: none;
+  font-size: 1.25em;
+  font-weight: 700;
+  text-transform: uppercase;
 }
 
 
