fix typo on homepage

--- a/app/views/spree/home/index.html.erb
+++ b/app/views/spree/home/index.html.erb
@@ -4,7 +4,7 @@
 
 <div class="callout sixteen columns alpha omega" style="background:#888;color:#fff;margin:1px 0px;">
   <div class="clearfix" style="padding:20px 30px 19px;">
-    <p style="float:left;font-size:26px;line-height:32px;padding:0px 0 0;margin:0;text-transform:uppercase;">Pipe&nbsp;&nbsp;<span style="font-weight:300;">One of the first paintings in it's style</span></p>
+    <p style="float:left;font-size:26px;line-height:32px;padding:0px 0 0;margin:0;text-transform:uppercase;">Pipe&nbsp;&nbsp;<span style="font-weight:300;">One of the first paintings in its style</span></p>
     <p style="float:right;padding:0;margin:0;"><a href="/products/pipe" class="button" style="background:#232323;padding:10px 6px 9px 13px;">Order Now&nbsp;&nbsp;&rang;</a></p>
   </div>
 </div>
