--- a/app/assets/stylesheets/spree/frontend/spree_hobrecht.css.erb
+++ b/app/assets/stylesheets/spree/frontend/spree_hobrecht.css.erb
@@ -40,6 +40,10 @@ h1,h2,h3,h4,h5,h6 {
   padding-bottom: 20px;
 }
 
+figure#logo img {
+  padding-top: 50px;
+}
+
 
 /*
 * Account Navigation
@@ -76,7 +80,7 @@ nav #main-nav-bar li a {
   font-size: 11px;
   font-weight: 600;
   letter-spacing: 1px;
-  margin: 0 20px;
+  margin: 0 30px;
   padding: 5px 10px;
 }
 nav #main-nav-bar li:first-child a {
