--- a/app/assets/stylesheets/spree/frontend/spree_hobrecht.css.erb
+++ b/app/assets/stylesheets/spree/frontend/spree_hobrecht.css.erb
@@ -95,6 +95,8 @@ nav #main-nav-bar a {
   display: inline-block;
   padding: 10px;
 }
+
+/* .sub-menu */
 nav #main-nav-bar ul {
   background: #fff;
   position:absolute;
@@ -106,11 +108,13 @@ nav #main-nav-bar ul {
   text-align:left;
   box-shadow: 1px 1px 3px #ccc;
 }
+
+/* .sub-menu .menu-item */
 nav #main-nav-bar ul li {
   display:block;
 }
 nav #main-nav-bar li:hover ul {
-  left: -5px;
+  left: 0px;
 }
 nav #main-nav-bar li:hover ul a {
   text-decoration:none;
@@ -120,7 +124,7 @@ nav #main-nav-bar ul a {
   white-space:nowrap;
   display:block;
   border-bottom:1px solid #ccc;
-  padding: 5px 10px 5px 15px;
+  padding: 5px 10px 5px 10px;
 }
 
 
