Change Mayweather announcement text to a single line. Display products in two columns on taxonomy pages.

--- a/app/assets/stylesheets/spree/frontend/spree_hobrecht.css.erb
+++ b/app/assets/stylesheets/spree/frontend/spree_hobrecht.css.erb
@@ -459,7 +459,7 @@ h1[data-hook="checkout_title"] {
 * Homepage Slide Show
 * * * * * * * * * * * * * * * * * * * */
 #slider {
-    margin: 115px auto 0 auto;
+    margin: 105px auto 0 auto;
     overflow: visible;
 }
 .slide-title {
@@ -491,11 +491,13 @@ h1[data-hook="checkout_title"] {
 * * * * * * * * * * * * * * * * * * * */
 ul#products li {
   font-weight: normal;
-  margin-bottom: 70px;
-  margin-top: 70px;
+  margin-bottom: 10px;
+  margin-top: 10px;
 }
 ul#products li .product-image {
   border: none;
+  max-height: 300px;
+  overflow: hidden;
   padding: 0;
 }
 ul#products li a.info {
@@ -503,6 +505,7 @@ ul#products li a.info {
   border-bottom: none;
   font-size: 1.25em;
   font-weight: 700;
+  height: 1em;
   text-transform: uppercase;
 }
 
