--- a/app/views/spree/shared/_slider.html.erb
+++ b/app/views/spree/shared/_slider.html.erb
@@ -1,57 +1,52 @@
 <style type="text/css">
 .announcement {
   display: block;
+  position: relative;
+}
+.announcement h2 {
   width: 100%;
   height: 60px;
-  position: relative;
+  line-height: 60px;
   background: #ddd;
-  padding: 20px 0;
   text-align: center;
 }
-
 .announcement svg {
   position: absolute;
   top: 0;
   left: 0;
 }
-
 .announcement svg line {
   stroke-width: 5;
   stroke: #000;
   fill: none;
-  stroke-dasharray: 1000;
+  stroke-dasharray: 960;
   -webkit-transition: all .6s;
   transition: transform .6s;
 }
-
 .announcement:hover svg line.top {
   -webkit-transform: translateX(-960px);
   transform: translateX(-960px);
 }
-
 .announcement:hover svg line.bottom {
   -webkit-transform: translateX(960px);
   transform: translateX(960px);
 }
-
 .announcement:hover svg line.left {
-  -webkit-transform: translateY(200px);
-  transform: translateY(200px);
+  -webkit-transform: translateY(60px);
+  transform: translateY(60px);
 }
-
 .announcement:hover svg line.right {
-  -webkit-transform: translateY(-100px);
-  transform: translateY(-100px);
+  -webkit-transform: translateY(-60px);
+  transform: translateY(-60px);
 }
 </style>
   <a class="announcement" href="/products/mayweather">
-    <svg width="960" height="100">
+    <svg width="100%" height="60">
       <line class="top" x1="960" y1="0" x2="1920" y2="0"/>
-      <line class="left" x1="0" y1="0" x2="0" y2="-200"/>
-      <line class="bottom" x1="0" y1="100" x2="-960" y2="100"/>
-      <line class="right" x1="960" y1="100" x2="960" y2="200"/>
-      <h2>New Mayweather</h2>
-      <h2>Painting in Progress!</h2>
+      <line class="left" x1="0" y1="0" x2="0" y2="-60"/>
+      <line class="bottom" x1="0" y1="60" x2="-960" y2="60"/>
+      <line class="right" x1="960" y1="60" x2="960" y2="120"/>
+      <h2>New Mayweather Painting in Progress!</h2>
     </svg>
   </a>
 
