increase padding-bottom on taxon page titles

--- a/app/assets/stylesheets/spree/frontend/spree_hobrecht.css.erb
+++ b/app/assets/stylesheets/spree/frontend/spree_hobrecht.css.erb
@@ -450,6 +450,7 @@ h1[data-hook="checkout_title"] {
   color: #8f8f8f;
   font-size: 23px;
   letter-spacing: 4px;
+  margin-bottom: 30px;
   text-align: center;
   text-transform: uppercase;
 }
