update homepage callout

--- a/app/views/spree/shared/_slider.html.erb
+++ b/app/views/spree/shared/_slider.html.erb
@@ -7,6 +7,7 @@
 .announcement h2 {
   line-height: 34px;
   padding: 15px;
+  font-size: 18px;
   background: #ddd;
   text-align: center;
 }
@@ -17,7 +18,7 @@
   font-size: 0.75em;
   font-weight: 400;
   line-height: 34px;
-  margin-left: 30px;
+  margin-left: 15px;
   padding: 0 1em;
 }
 </style>
@@ -25,7 +26,7 @@
 <div id="content" class="columns sixteen">
   
   <a class="announcement" href="/products/mayweather">
-      <h2>A New Floyd Mayweather Painting is in Progress! <span class="button">Check it out &nbsp; &rang;</span></h2>
+      <h2>Mayweather Painting Complete! Own your piece of boxing history! <span class="button">Order Now</span></h2>
   </a>
 
   <% if Spree::Slide.published.count > 0 %>
