add webengage javascript snippet to footer

--- a/app/views/spree/shared/_footer.html.erb
+++ b/app/views/spree/shared/_footer.html.erb
@@ -25,7 +25,7 @@
 
     <nav class="row">
       <ul id="legal-nav-bar" class="inline" data-hook>
-        <li class="copyright"><%= link_to raw("&copy; 2014 Hobrecht Sports Art"), "/bio" %></li>
+        <li class="copyright"><%= link_to raw("&copy; 2015 Hobrecht Sports Art"), "/bio" %></li>
         <li class="terms"><%= link_to "Terms & Conditions", "/terms" %></li>
         <li class="terms"><%= link_to "Privacy Policy", "/privacy" %></li>
         <li class="terms"><%= link_to "Return Policy", "/returns" %></li>
@@ -34,3 +34,19 @@
 
   </div>
 </footer>
+
+<script id="_webengage_script_tag" type="text/javascript">
+  var _weq = _weq || {};
+  _weq['webengage.licenseCode'] = '~47b66829';
+  _weq['webengage.widgetVersion'] = "4.0";
+
+  (function(d){
+    var _we = d.createElement('script');
+    _we.type = 'text/javascript';
+    _we.async = true;
+    _we.src = (d.location.protocol == 'https:' ? "//ssl.widgets.webengage.com" : "//cdn.widgets.webengage.com") +
+              "/js/widget/webengage-min-v-3.0.js";
+    var _sNode = d.getElementById('_webengage_script_tag');
+    _sNode.parentNode.insertBefore(_we, _sNode);
+  })(document);
+</script>
