enhancements to mobile responsiveness

--- a/app/assets/stylesheets/spree/frontend/spree_hobrecht.css.erb
+++ b/app/assets/stylesheets/spree/frontend/spree_hobrecht.css.erb
@@ -59,6 +59,19 @@ nav#top-nav-bar ul li a {
   color: #888;
 }
 
+@media all and (max-width: 770px) {
+
+  #top-nav-bar {
+    position: relative;
+    text-align: center;
+    margin: 10px 0;
+  }
+
+  .bx-wrapper .bx-caption span {
+    font-size: 1em !important;
+  }
+}
+
 
 /*
 * Main Navigation
@@ -126,6 +139,15 @@ nav #main-nav-bar ul a {
   display:block;
   border-bottom:1px solid #ccc;
   padding: 5px 10px 5px 10px;
+}
+
+@media all and (max-width: 770px) {
+
+  nav #main-nav-bar li a {
+    margin: 0 15px;
+    padding: 5px 10px;
+  }
+
 }
 
 
